# mri-dl-recon

./: README.md  fastMRI_tutorial.ipynb  pyproject.toml  requirements.txt  test_virtual_coil_reconstruction.ipynb
examples/: example_debug.py
fasmri_recon/models/subclassed_models/: unet.py
fasmri_recon/models/utils/: REFAIREdata_consistencyPY.py  complex.py  non_linearities.py  pad_for_pool.py
fasmri_reconPy/models/utils/: data_consistencyPY.py  fastmri_formatPY.py  gpu_placementPY.py  maskingPY.py  test.py
src/fastmri/: coil_combine.py
src/functions_tf/: test_virtual_coil_reconstruction.ipynb
src/mri_dlrecon/data/: create_template.py
src/mri_dlrecon/functions_tf/: testgpt_file.py  tuto_function_tf.ipynb  utils_tf.py
src/mri_dlrecon/functions_torch/: train_unet_demo.py  trash.ipynb  tuto_Unet.ipynb  tuto_Varnet.ipynb  tuto_fast.ipynb  tuto_function_torch.ipynb  utils_torch.py
src/mri_dlrecon/functions_torch/data/: accelaration_factor.py  gen_mask_torch.py
src/mri_dlrecon/models/: fastmri_varnet_model.pth  tuto_Unet.ipynb  tuto_Varnet.ipynb  tuto_function_torch.ipynb  unet_trainning_script.py
src/mri_dlrecon/models/functions_tf/: utils_tf.py
src/mri_dlrecon/models/functions_torch/: fastmri_varnet_model.pth  tuto_Unet.ipynb  tuto_Varnet.ipynb  xpdnet.py
src/mri_dlrecon/models/functions_torch/denoisers/: didn.py
src/mri_dlrecon/models/utils/: data_transform.py  fourier.py  masking.py  utils_torch.py  vcr.py
tests/: test_data.py  test_sampling_mask.py  test_vcr.py  test_virtual_coil_reconstruction.ipynb  utils.py
tests/test_models/test_denoisers/: test_didn.py
