[project]
name = "mri_dl_recon"
version = "0.0.1"
authors = [
  { name="lena Oudjman", email="lenaoudjman@yahoo.fr" },
]
description = "fastmri_recon in torch"

readme = "README.md"
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]



[project.urls]
Homepage = "https://github.com/mind-inria/mri-dl-recon"



[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0"
    ]

